# OvGU-CPP-SoSe25

./: .clang-format  .gitignore  ReadMe.md
A01/: ArrayList.java
A02/: RockPaperScissors.cpp  a.out
A03/: CMakeCache.txt  CMakeLists.txt  Makefile  a03  cmake_install.cmake  compile_commands.json  main.cpp  utils.cpp
A04/: CMakeLists.txt  main.cpp  scopetimer.cpp  scopetimer.hpp
A05/: CMakeLists.txt  immstring.cpp  immstring.hpp
A06/: CMakeLists.txt
CppUtil/: Array.hpp  CMakeLists.txt  Iteration.hpp  List.hpp
CppUtil/test/: ArrayTest.cpp
